--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -255,24 +255,16 @@
       "name": "JSON से YAML",
       "description": "JSON डेटा को YAML प्रारूप में परिवर्तित करें",
       "placeholder": "कृपया JSON डेटा दर्ज करें...",
-      "yaml_placeholder": "कृपया YAML डेटा दर्ज करें...",
-      "invalid": "अमान्य JSON प्रारूप",
       "invalid_json": "अमान्य JSON प्रारूप",
-      "invalid_yaml": "अमान्य YAML प्रारूप",
       "convert": "YAML में परिवर्तित करें",
       "input_title": "JSON इनपुट",
       "input_desc": "परिवर्तित करने के लिए JSON डेटा दर्ज करें",
-      "yaml_input_title": "YAML इनपुट",
-      "yaml_input_desc": "परिवर्तित करने के लिए YAML डेटा दर्ज करें",
       "output_title": "YAML आउटपुट",
       "output_desc": "परिवर्तित YAML डेटा",
-      "json_output_title": "JSON आउटपुट",
-      "json_output_desc": "परिवर्तित JSON डेटा",
       "output_placeholder": "परिवर्तित YAML यहां प्रदर्शित होगा...",
-      "json_output_placeholder": "परिवर्तित JSON यहां प्रदर्शित होगा...",
       "introduction": "JSON से YAML कनवर्टर एक फॉर्मेट कन्वर्शन टूल है जो विशेष रूप से कॉन्फ़िगरेशन फाइल प्रबंधन और डेटा एक्सचेंज के लिए डिज़ाइन किया गया है। यह JSON डेटा स्ट्रक्चर को बिना नुकसान के YAML फॉर्मेट में परिवर्तित कर सकता है, जटिल नेस्टेड ऑब्जेक्ट्स और एरे स्ट्रक्चर्स का समर्थन करता है, और स्वचालित रूप से उचित इंडेंटेशन के साथ पठनीय YAML आउटपुट जेनरेट करता है। DevOps, कॉन्फ़िगरेशन प्रबंधन, API डॉक्यूमेंटेशन आदि विभिन्न परिदृश्यों के लिए उपयुक्त है।",
       "features": [
-        "🔄 हानिरहित JSON से YAML फॉर्मेट कन्वर्शन",
+        "🔄 JSON डेटा को YAML कॉन्फ़िगरेशन फॉर्मेट में एक-क्लिक से बदलें",
         "📝 स्वचालित रूप से मानक YAML इंडेंटेशन फॉर्मेट जेनरेट करता है",
         "🎯 जटिल नेस्टेड ऑब्जेक्ट्स और एरेज़ का समर्थन",
         "📋 डेटा टाइप और स्ट्रक्चर इंटग्रिटी बनाए रखता है",
@@ -303,6 +295,45 @@
         "title": "JSON से YAML कनवर्टर - ऑनलाइन कॉन्फ़िग फाइल कनवर्टर",
         "description": "कॉन्फ़िग फाइलों के लिए तुरंत JSON को YAML प्रारूप में परिवर्तित करें। फॉर्मेटेड आउटपुट, सिंटैक्स वैलिडेशन और वन-क्लिक डाउनलोड के साथ मुफ्त ऑनलाइन टूल।",
         "keywords": "JSON से YAML, YAML कनवर्टर, कॉन्फ़िग कनवर्टर"
+      }
+    },
+    "yaml-to-json": {
+      "name": "YAML से JSON",
+      "description": "YAML कॉन्फ़िगरेशन को JSON डेटा में परिवर्तित करें",
+      "placeholder": "कृपया YAML डेटा दर्ज करें...",
+      "invalid_yaml": "अमान्य YAML प्रारूप",
+      "input_title": "YAML इनपुट",
+      "input_desc": "परिवर्तित करने के लिए YAML डेटा दर्ज करें",
+      "output_title": "JSON आउटपुट",
+      "output_desc": "परिवर्तित JSON डेटा",
+      "output_placeholder": "परिवर्तित JSON यहां प्रदर्शित होगा...",
+      "introduction": "YAML से JSON कनवर्टर कॉन्फ़िगरेशन माइग्रेशन और डेटा इंटीग्रेशन परिदृश्यों के लिए डिज़ाइन किया गया है। यह Kubernetes मैनिफेस्ट, Docker Compose फाइलें, CI/CD पाइपलाइन्स आदि जैसे सामान्य YAML कॉन्फ़िगरेशन फाइलों को साफ-सुथरी JSON संरचना में बदलने में मदद करता है जिसे कोड या APIs द्वारा सीधे उपयोग किया जा सके। टूल जटिल नेस्टेड संरचनाओं और एरेज़ का समर्थन करता है और यह सुनिश्चित करता है कि कनवर्टेड JSON मूल YAML के समान ही अर्थ बनाए रखे।",
+      "features": [
+        "🔄 YAML कॉन्फ़िगरेशन को मानक JSON फॉर्मेट में एक-क्लिक से कन्वर्ट करें",
+        "🎯 गहराई से नेस्टेड ऑब्जेक्ट्स और एरे स्ट्रक्चर्स का समर्थन",
+        "🧩 बैकएंड/फ्रंटएंड कोड और APIs के साथ इंटीग्रेशन को आसान बनाता है",
+        "💾 परिणाम को डाउनलोड करने का समर्थन, सहेजने और साझा करने में सुविधाजनक",
+        "⚡ ब्राउज़र में रियल-टाइम कन्वर्शन, किसी सर्वर पर निर्भरता नहीं",
+        "🔒 कोई डेटा अपलोड नहीं, संवेदनशील कॉन्फ़िगरेशन सुरक्षित रखता है"
+      ],
+      "faq": [
+        {
+          "question": "YAML से JSON कन्वर्शन आमतौर पर किन परिदृश्यों में उपयोग किया जाता है?",
+          "answer": "सामान्य परिदृश्यों में शामिल हैं: Kubernetes, Docker Compose और अन्य YAML कॉन्फ़िगरेशन फाइलों को JSON में बदलना ताकि उन्हें सीधे कोड में एम्बेड किया जा सके; ऑप्स/कॉन्फ़िग टीम द्वारा प्रदान किए गए YAML को JSON में बदलना ताकि सर्विसेज इसे आसानी से कंज्यूम कर सकें; और विभिन्न सिस्टम्स के बीच डेटा फॉर्मेट को कन्वर्ट करना।"
+        },
+        {
+          "question": "क्या कनवर्टेड JSON मूल कॉन्फ़िगरेशन का अर्थ बदल देगा?",
+          "answer": "नहीं। टूल YAML में मौजूद हायरार्की और डेटा टाइप्स (स्ट्रिंग्स, नंबर्स, बूलीयन्स, ऑब्जेक्ट्स, एरेज़ आदि) को सुरक्षित रखता है और केवल रिप्रेजेंटेशन फॉर्मेट बदलता है, अर्थ नहीं। फिर भी, प्रोडक्शन कॉन्फ़िगरेशन के लिए हम अनुशंसा करते हैं कि पहले स्टेजिंग वातावरण में परिणाम को वेरिफाई किया जाए।"
+        },
+        {
+          "question": "क्या टूल अपेक्षाकृत बड़े YAML फाइलों का समर्थन करता है?",
+          "answer": "हाँ। यह आधुनिक ब्राउज़रों में आमतौर पर सैकड़ों KB से कुछ MB तक की YAML फाइलों को संभाल सकता है। बहुत बड़े फाइलों के लिए, ब्राउज़र सीमाओं के कारण रूपांतरण थोड़ा धीमा हो सकता है, इसलिए आवश्यक होने पर उन्हें विभाजित करना बेहतर है।"
+        }
+      ],
+      "meta": {
+        "title": "YAML से JSON कनवर्टर - कॉन्फ़िग फॉर्मेट कन्वर्शन",
+        "description": "कॉन्फ़िग फाइलों के लिए ऑनलाइन YAML से JSON कनवर्टर। नेस्टेड स्ट्रक्चर्स और एरेज़ का समर्थन। Kubernetes/Docker कॉन्फ़िगरेशन के लिए उपयुक्त। वन-क्लिक कॉपी या डाउनलोड।",
+        "keywords": "YAML से JSON, कॉन्फ़िग कन्वर्टर, YAML कनवर्टर"
       }
     },
     "json-to-xml": {
