--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -252,27 +252,19 @@
       }
     },
     "json-to-yaml": {
-      "name": "JSON⇄YAML转换器",
-      "description": "JSON与YAML格式互相转换",
+      "name": "JSON转YAML",
+      "description": "将JSON数据转换为YAML格式",
       "placeholder": "请输入JSON数据...",
-      "yaml_placeholder": "请输入YAML数据...",
-      "invalid": "无效的JSON格式",
       "invalid_json": "无效的JSON格式",
-      "invalid_yaml": "无效的YAML格式",
-      "convert": "转换",
+      "convert": "转换为YAML",
       "input_title": "输入 JSON",
       "input_desc": "输入要转换的 JSON 数据",
-      "yaml_input_title": "输入 YAML",
-      "yaml_input_desc": "输入要转换的 YAML 数据",
       "output_title": "输出 YAML",
       "output_desc": "转换后的 YAML 数据",
-      "json_output_title": "输出 JSON",
-      "json_output_desc": "转换后的 JSON 数据",
       "output_placeholder": "转换后的 YAML 将显示在这里...",
-      "json_output_placeholder": "转换后的 JSON 将显示在这里...",
       "introduction": "JSON⇄YAML双向转换器是专为配置文件管理和数据交换设计的格式转换工具。支持JSON与YAML格式之间的无损双向转换，支持复杂嵌套对象、数组结构，自动生成具有良好缩进的输出。适用于DevOps、配置管理、API文档等多种场景。",
       "features": [
-        "🔄 JSON与YAML双向转换，一键切换转换方向",
+        "🔄 一键将JSON转换为YAML配置格式",
         "📝 自动生成标准格式缩进",
         "🎯 支持复杂嵌套对象和数组",
         "📋 保持数据类型和结构完整性",
@@ -303,6 +295,45 @@
         "title": "JSON转YAML转换器 - 配置文件转换",
         "description": "在线JSON转YAML转换工具,专为配置文件转换设计,支持格式化输出和语法验证,一键下载YAML文件。",
         "keywords": "JSON转YAML, YAML转换器, 配置文件转换"
+      }
+    },
+    "yaml-to-json": {
+      "name": "YAML转JSON",
+      "description": "将YAML配置转换为JSON格式数据",
+      "placeholder": "请输入YAML数据...",
+      "invalid_yaml": "无效的YAML格式",
+      "input_title": "输入 YAML",
+      "input_desc": "输入要转换的 YAML 数据",
+      "output_title": "输出 JSON",
+      "output_desc": "转换后的 JSON 数据",
+      "output_placeholder": "转换后的 JSON 将显示在这里...",
+      "introduction": "YAML转JSON转换器专为配置迁移和数据集成场景设计，可以将常见的YAML配置文件（如Kubernetes、Docker Compose、CI/CD配置等）快速转换为结构清晰的JSON格式，便于在代码中直接使用或与各类API/服务对接。工具支持复杂嵌套结构和数组，确保转换后的JSON数据与原始配置语义一致。",
+      "features": [
+        "🔄 将YAML配置一键转换为标准JSON格式",
+        "🎯 支持多层嵌套对象和数组结构",
+        "🧩 便于与前后端代码和各类API直接集成",
+        "💾 支持结果下载，方便保存和分享",
+        "⚡ 浏览器本地实时转换，无需上传文件",
+        "🔒 不上传任何数据，保护敏感配置安全"
+      ],
+      "faq": [
+        {
+          "question": "YAML转JSON通常用于哪些场景？",
+          "answer": "常见场景包括：将Kubernetes、Docker Compose等YAML配置转换为JSON，便于在代码中直接嵌入；将运维/配置团队提供的YAML文件转换为前端或后端系统可直接消费的JSON格式；在不同系统之间进行数据格式转换等。"
+        },
+        {
+          "question": "转换后的JSON是否会改变原有配置含义？",
+          "answer": "不会。工具会保留YAML中的层级关系和数据类型（如字符串、数字、布尔值、对象、数组等），只改变表现形式，不改变实际含义。建议在关键生产配置前先在测试环境验证一次。"
+        },
+        {
+          "question": "工具是否支持较大的YAML文件？",
+          "answer": "支持，一般几百KB到几MB的YAML文件都可以正常转换。受限于浏览器性能，极大的文件可能会略有卡顿，建议适当切分后再转换。"
+        }
+      ],
+      "meta": {
+        "title": "YAML转JSON转换器 - 配置文件格式转换",
+        "description": "在线YAML转JSON转换工具,支持多层嵌套配置和数组结构,适用于Kubernetes/Docker等配置文件格式转换,一键复制或下载结果。",
+        "keywords": "YAML转JSON, 配置转换, YAML转换器"
       }
     },
     "json-to-xml": {
